# Micro-ecommerce

./: README.md  pyproject.toml
cfehome/: db.py  settings.py  urls.py
products/: forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_price_changed_timestamp.py
