[tool.poetry]
name = "micro-ecommerce"
version = "0.1.0"
description = ""
authors = ["SahilMehdiyev <branchsahil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-jazzmin = "^3.0.1"
django-dotenv = "^1.4.2"
psycopg = "^3.2.3"
rav = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
